[main] add setup for sending subscription messages and displaying position information in frontend